// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput renders correctly - disabled 1`] = `
<View
  style={
    {
      "width": "100%",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 6,
      }
    }
  >
    <Text
      style={
        [
          {
            "color": "#FFFFFF",
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 24,
            "textAlign": "left",
          },
          [
            {
              "fontFamily": "PlusJakartaSans-Regular",
              "fontSize": 12,
              "lineHeight": 20,
            },
            {
              "color": "#a9a9a9",
            },
          ],
        ]
      }
    >
      Username
    </Text>
  </View>
  <View
    style={
      [
        {
          "borderColor": "transparent",
          "borderRadius": 12,
          "borderWidth": 1,
        },
        {
          "borderColor": "transparent",
        },
      ]
    }
  >
    <TextInput
      accessibilityLabel="Username"
      accessibilityState={
        {
          "disabled": true,
        }
      }
      editable={false}
      onBlur={[Function]}
      onChangeText={[MockFunction]}
      onFocus={[Function]}
      placeholderTextColor="#222222"
      style={
        [
          {
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 20,
            "lineHeight": 32,
            "paddingHorizontal": 0,
            "paddingVertical": 16,
          },
          {
            "color": "#222222",
          },
          {
            "color": "#dddddd",
          },
          false,
          {
            "opacity": 0.5,
          },
        ]
      }
      value="johndoe"
    />
  </View>
</View>
`;

exports[`TextInput renders correctly - empty dark variant 1`] = `
<View
  style={
    {
      "width": "100%",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 6,
      }
    }
  >
    <Text
      style={
        [
          {
            "color": "#FFFFFF",
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 24,
            "textAlign": "left",
          },
          [
            {
              "fontFamily": "PlusJakartaSans-Regular",
              "fontSize": 12,
              "lineHeight": 20,
            },
            {
              "color": "#a9a9a9",
            },
          ],
        ]
      }
    >
      Full Name
    </Text>
  </View>
  <View
    style={
      [
        {
          "borderColor": "transparent",
          "borderRadius": 12,
          "borderWidth": 1,
        },
        {
          "borderColor": "transparent",
        },
      ]
    }
  >
    <TextInput
      accessibilityLabel="Full Name"
      accessibilityState={
        {
          "disabled": false,
        }
      }
      editable={true}
      onBlur={[Function]}
      onChangeText={[MockFunction]}
      onFocus={[Function]}
      placeholder="Enter your name"
      placeholderTextColor="#222222"
      style={
        [
          {
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 20,
            "lineHeight": 32,
            "paddingHorizontal": 0,
            "paddingVertical": 16,
          },
          {
            "color": "#222222",
          },
          false,
          false,
          undefined,
        ]
      }
      value=""
    />
  </View>
</View>
`;

exports[`TextInput renders correctly - light variant empty 1`] = `
<View
  style={
    {
      "width": "100%",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 6,
      }
    }
  >
    <Text
      style={
        [
          {
            "color": "#FFFFFF",
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 24,
            "textAlign": "left",
          },
          [
            {
              "fontFamily": "PlusJakartaSans-Regular",
              "fontSize": 12,
              "lineHeight": 20,
            },
            {
              "color": "#797979",
            },
          ],
        ]
      }
    >
      Address
    </Text>
  </View>
  <View
    style={
      [
        {
          "borderColor": "transparent",
          "borderRadius": 12,
          "borderWidth": 1,
        },
        {
          "borderColor": "transparent",
        },
      ]
    }
  >
    <TextInput
      accessibilityLabel="Address"
      accessibilityState={
        {
          "disabled": false,
        }
      }
      editable={true}
      onBlur={[Function]}
      onChangeText={[MockFunction]}
      onFocus={[Function]}
      placeholder="Enter address"
      placeholderTextColor="#797979"
      style={
        [
          {
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 20,
            "lineHeight": 32,
            "paddingHorizontal": 0,
            "paddingVertical": 16,
          },
          {
            "color": "#797979",
          },
          false,
          false,
          undefined,
        ]
      }
      value=""
    />
  </View>
</View>
`;

exports[`TextInput renders correctly - light variant with value 1`] = `
<View
  style={
    {
      "width": "100%",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 6,
      }
    }
  >
    <Text
      style={
        [
          {
            "color": "#FFFFFF",
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 24,
            "textAlign": "left",
          },
          [
            {
              "fontFamily": "PlusJakartaSans-Regular",
              "fontSize": 12,
              "lineHeight": 20,
            },
            {
              "color": "#797979",
            },
          ],
        ]
      }
    >
      City
    </Text>
  </View>
  <View
    style={
      [
        {
          "borderColor": "transparent",
          "borderRadius": 12,
          "borderWidth": 1,
        },
        {
          "borderColor": "transparent",
        },
      ]
    }
  >
    <TextInput
      accessibilityLabel="City"
      accessibilityState={
        {
          "disabled": false,
        }
      }
      editable={true}
      onBlur={[Function]}
      onChangeText={[MockFunction]}
      onFocus={[Function]}
      placeholderTextColor="#797979"
      style={
        [
          {
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 20,
            "lineHeight": 32,
            "paddingHorizontal": 0,
            "paddingVertical": 16,
          },
          {
            "color": "#797979",
          },
          {
            "color": "#131313",
          },
          false,
          undefined,
        ]
      }
      value="Mumbai"
    />
  </View>
</View>
`;

exports[`TextInput renders correctly - with error 1`] = `
<View
  style={
    {
      "width": "100%",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 6,
      }
    }
  >
    <Text
      style={
        [
          {
            "color": "#FFFFFF",
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 24,
            "textAlign": "left",
          },
          [
            {
              "fontFamily": "PlusJakartaSans-Regular",
              "fontSize": 12,
              "lineHeight": 20,
            },
            {
              "color": "#a9a9a9",
            },
          ],
        ]
      }
    >
      Email
    </Text>
    <Text
      style={
        [
          {
            "color": "#FFFFFF",
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 24,
            "textAlign": "left",
          },
          [
            {
              "fontFamily": "PlusJakartaSans-Regular",
              "fontSize": 14,
              "lineHeight": 20,
              "textAlign": "right",
            },
            {
              "color": "#E5484D",
            },
          ],
        ]
      }
    >
      Invalid email address
    </Text>
  </View>
  <View
    style={
      [
        {
          "borderColor": "transparent",
          "borderRadius": 12,
          "borderWidth": 1,
        },
        {
          "borderColor": "#E5484D",
        },
      ]
    }
  >
    <TextInput
      accessibilityLabel="Email"
      accessibilityState={
        {
          "disabled": false,
        }
      }
      editable={true}
      onBlur={[Function]}
      onChangeText={[MockFunction]}
      onFocus={[Function]}
      placeholderTextColor="#222222"
      style={
        [
          {
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 20,
            "lineHeight": 32,
            "paddingHorizontal": 0,
            "paddingVertical": 16,
          },
          {
            "color": "#222222",
          },
          {
            "color": "#dddddd",
          },
          {
            "color": "#E5484D",
          },
          undefined,
        ]
      }
      value="invalid"
    />
  </View>
</View>
`;

exports[`TextInput renders correctly - with value dark variant 1`] = `
<View
  style={
    {
      "width": "100%",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 6,
      }
    }
  >
    <Text
      style={
        [
          {
            "color": "#FFFFFF",
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 24,
            "textAlign": "left",
          },
          [
            {
              "fontFamily": "PlusJakartaSans-Regular",
              "fontSize": 12,
              "lineHeight": 20,
            },
            {
              "color": "#a9a9a9",
            },
          ],
        ]
      }
    >
      Full Name
    </Text>
  </View>
  <View
    style={
      [
        {
          "borderColor": "transparent",
          "borderRadius": 12,
          "borderWidth": 1,
        },
        {
          "borderColor": "transparent",
        },
      ]
    }
  >
    <TextInput
      accessibilityLabel="Full Name"
      accessibilityState={
        {
          "disabled": false,
        }
      }
      editable={true}
      onBlur={[Function]}
      onChangeText={[MockFunction]}
      onFocus={[Function]}
      placeholderTextColor="#222222"
      style={
        [
          {
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 20,
            "lineHeight": 32,
            "paddingHorizontal": 0,
            "paddingVertical": 16,
          },
          {
            "color": "#222222",
          },
          {
            "color": "#dddddd",
          },
          false,
          undefined,
        ]
      }
      value="John Doe"
    />
  </View>
</View>
`;
